apps/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: filebrowser-gitops:/Service:filebrowser/filebrowser
  name: filebrowser
  namespace: filebrowser
spec:
  - 10.102.12.33
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: filebrowser
  sessionAffinity: None
  type: ClusterIP
  loadBalancer: {}
